--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,19 @@
         android:theme="@style/Theme.MovieBooking"
         tools:targetApi="31">
         <activity
-            android:name=".MovieActivity"
+            android:name=".Activity.MovieActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".SignUp"
+            android:name=".Activity.SignUp"
             android:exported="false" />
         <activity
-            android:name=".SignIn"
+            android:name=".Activity.SignIn"
             android:exported="false" />
         <activity
-            android:name=".AddUserName"
+            android:name=".Activity.AddUserName"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
