--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,15 +15,16 @@
         android:theme="@style/Theme.MovieBooking"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.SelectShowtime"
+            android:exported="false" />
+        <activity
             android:name=".Activity.MovieDetail"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Activity.MovieActivity"
             android:exported="true" />
@@ -39,7 +40,6 @@
         <activity
             android:name=".Activity.AddUserName"
             android:exported="true">
-
         </activity>
     </application>
 
