--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.MovieBooking"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.SelectSeat"
+            android:exported="false" />
+        <activity
             android:name=".Activity.SelectShowtime"
             android:exported="false" />
         <activity
@@ -22,6 +25,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -39,8 +43,7 @@
             android:exported="false" />
         <activity
             android:name=".Activity.AddUserName"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
