--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.MovieBooking"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.TicketDetail"
+            android:exported="true" />
+        <activity
             android:name=".Activity.MyTicket"
             android:exported="true" />
         <activity
