--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".Activity.TicketHistory"
+            android:exported="true" />
         <activity
             android:name=".Activity.Profile"
             android:exported="true" />
@@ -65,7 +67,7 @@
             android:exported="false" />
         <activity
             android:name=".Activity.SignUp"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Activity.SignIn"
             android:exported="false" />
